chore: add import example in docs

--- a/src/demo-app/app/color-picker/color-picker.component.html
+++ b/src/demo-app/app/color-picker/color-picker.component.html
@@ -16,7 +16,9 @@
     <p>When import the
       <code>MccColorPickerModule</code>, you can provide a configuration for the empy value.</p>
 
-    <pre class="code-snippet"><code class="lang-typescript">  <span class="hljs-variable">@NgModule</span>({{ '{' }}
+    <pre class="code-snippet"><code class="lang-typescript"> import {{ '{' }} MccColorPickerModule {{ '}' }} from 'material-community-components';
+
+  <span class="hljs-variable">@NgModule</span>({{ '{' }}
     ...
     <span class="hljs-attribute">imports</span>: [
       MccColorPickerModule.forRoot({{ '{' }}
