--- a/src/demo-app/app/timer-picker/timer-picker.component.html
+++ b/src/demo-app/app/timer-picker/timer-picker.component.html
@@ -18,13 +18,15 @@
     <p>To use this component, just import the module from
       <code>material-community-component</code> package.</p>
 
-    <pre class="code-snippet"><code class="lang-typescript">  <span class="hljs-variable">@NgModule</span>({{ '{' }}
-      ...
-      <span class="hljs-attribute">imports</span>: [
-        MccTimerPickerModule
-      ]
-      ...
-    {{ '}' }})
+    <pre class="code-snippet"><code class="lang-typescript">  import {{ '{' }} MccTimerPickerModule {{ '}' }} from 'material-community-components';
+
+  <span class="hljs-variable">@NgModule</span>({{ '{' }}
+    ...
+    <span class="hljs-attribute">imports</span>: [
+      MccTimerPickerModule
+    ]
+    ...
+  {{ '}' }})
   </code>
 </pre>
 
