--- a/src/demo-app/app/color-picker/components/color-picker-examples.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-examples.component.html
@@ -144,7 +144,7 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title>
-      <span [style.color]="changeColor">Change color on change</span>
+      <span [style.color]="changeColor !== 'none' ? changeColor : 'rgba(0, 0, 0, 0.5)'">Change color on change</span>
     </mat-card-title>
   </mat-card-header>
 
