feat(timepicker): add min and max time inputs

--- a/src/demo-app/app/timer-picker/components/timer-picker-api.component.html
+++ b/src/demo-app/app/timer-picker/components/timer-picker-api.component.html
@@ -26,6 +26,18 @@
     </tr>
     <tr>
       <td>
+        <code>mccTimerPickerMin: string</code>
+      </td>
+      <td class="api-description">Define the minimum allowed time (default: 00:00 am)</td>
+    </tr>
+    <tr>
+      <td>
+        <code>mccTimerPickerMax: string</code>
+      </td>
+      <td class="api-description">Define the maximum allowed time (default: 12:00 pm)</td>
+    </tr>
+    <tr>
+      <td>
         <code>btnCancel: string</code>
       </td>
       <td class="api-description">Cancel button text (default: Cancel)</td>
