feat(timepicker): support 24h time format for mix and max values

--- a/src/demo-app/app/timer-picker/components/timer-picker-api.component.html
+++ b/src/demo-app/app/timer-picker/components/timer-picker-api.component.html
@@ -28,13 +28,13 @@
       <td>
         <code>mccTimerPickerMin: string</code>
       </td>
-      <td class="api-description">Define the minimum allowed time (default: 00:00 am)</td>
+      <td class="api-description">Define the minimum allowed time (default: 00:00 am, accepts both formats)</td>
     </tr>
     <tr>
       <td>
         <code>mccTimerPickerMax: string</code>
       </td>
-      <td class="api-description">Define the maximum allowed time (default: 12:00 pm)</td>
+      <td class="api-description">Define the maximum allowed time (default: 12:00 pm, accepts both formats)</td>
     </tr>
     <tr>
       <td>
