chore: improve documentation

--- a/src/demo-app/app/scrollspy/scrollspy.component.html
+++ b/src/demo-app/app/scrollspy/scrollspy.component.html
@@ -13,6 +13,8 @@
     </ng-template>
 
     <h2>MccScrollspy</h2>
+    <p>Scrollspy was created to link any point of a document that you want and create a sidebar navigation for that.</p>
+
 
   </mat-tab>
 
