--- a/src/lib/timer-picker/timer-picker.component.scss
+++ b/src/lib/timer-picker/timer-picker.component.scss
@@ -3,15 +3,15 @@
 $primary: #00796b;
 
 .mcc-timer-picker-overlay {
-  width: 325px;
-  height: 480px;
+  width: 290px;
+  height: 400px;
 }
 
 .mcc-timer-picker-header {
   display: flex;
-  width: 215px;
+  width: 220px;
   height: 65px;
-  padding: 15px 0 15px 110px;
+  padding: 10px 0 5px 70px;
   background: $primary;
 }
 
@@ -66,15 +66,15 @@ $primary: #00796b;
 
 .mcc-timer-picker-content {
   width: inherit;
-  height: 310px;
-  padding: 15px 0;
+  height: 260px;
+  padding: 15px 0 5px 0;
   background-color: #ffffff;
 }
 
 .mcc-timer-picker-clock {
   position: relative;
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   margin: 0 auto;
   background-color: #eeeeee;
   border-radius: 50%;
@@ -82,91 +82,82 @@ $primary: #00796b;
 
   .mcc-timer-picker-dot {
     position: absolute;
-    width: 6px;
-    height: 6px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
     background-color: $primary;
-    top: 147px;
-    left: 147px;
+    top: 125px;
+    left: 125px;
   }
 
   .mcc-timer-picker-line {
     position: absolute;
-    width: 115px;
-    height: 2px;
+    width: 2px;
+    height: 100px;
+    top: 11.5%;
+    left: 51%;
+    transform-origin: 50% 100%;
     background-color: $primary;
 
     // 12h or 00m
     &.selected-index-0 {
-      top: 92px;
-      left: 92px;
-      transform: rotateZ(90deg);
+      transform: rotateZ(0deg);
+      transition: 240ms ease;
     }
     // 11h or 55m
     &.selected-index-1 {
-      top: 101px;
-      left: 58px;
-      transform: rotateZ(414deg);
+      transform: rotateZ(327deg);
+      transition: 240ms ease;
     }
     // 1h or 05m
     &.selected-index-2 {
-      top: 100px;
-      left: 128px;
-      transform: rotateZ(126deg);
+      transform: rotateZ(30deg);
+      transition: 240ms ease;
     }
     // 10h or 50m
     &.selected-index-3 {
-      top: 123px;
-      left: 39px;
-      transform: rotateZ(386deg);
+      transform: rotateZ(300deg);
+      transition: 240ms ease;
     }
     // 2h or 10m
     &.selected-index-4 {
-      top: 124px;
-      left: 142px;
-      transform: rotateZ(153deg);
+      transform: rotateZ(60deg);
+      transition: 240ms ease;
     }
     // 9h or 45m
     &.selected-index-5 {
-      top: 149px;
-      left: 34px;
-      transform: rotateZ(360deg);
+      transform: rotateZ(270deg);
+      transition: 240ms ease;
     }
     // 3h or 15m
     &.selected-index-6 {
-      top: 149px;
-      left: 147px;
-      transform: rotateZ(180deg);
+      transform: rotateZ(90deg);
+      transition: 240ms ease;
     }
     // 8h or 40m
     &.selected-index-7 {
-      top: 177px;
-      left: 42px;
-      transform: rotateZ(331deg);
+      transform: rotateZ(240deg);
+      transition: 240ms ease;
     }
     // 4h or 20m
     &.selected-index-8 {
-      top: 178px;
-      left: 142px;
-      transform: rotateZ(210deg);
+      transform: rotateZ(120deg);
+      transition: 240ms ease;
     }
     // 7h or 35m
     &.selected-index-9 {
-      top: 196px;
-      left: 58px;
-      transform: rotateZ(306deg);
+      transform: rotateZ(210deg);
+      transition: 240ms ease;
     }
     // 5h or 25m
     &.selected-index-10 {
-      top: 195px;
-      left: 128px;
-      transform: rotateZ(233deg);
+      transform: rotateZ(150deg);
+      transition: 240ms ease;
     }
     // 6h or 30m
     &.selected-index-11 {
-      top: 208px;
-      left: 92px;
-      transform: rotateZ(270deg);
+      transform: rotateZ(180deg);
+      transition: 240ms ease;
     }
   }
 
@@ -180,7 +171,7 @@ $primary: #00796b;
 
     &#option-0 {
       top: 0;
-      left: 130px;
+      left: 113px;
     }
     &#option-1 {
       top: 25px;
@@ -191,40 +182,40 @@ $primary: #00796b;
       right: 55px;
     }
     &#option-3 {
-      top: 70px;
-      left: 15px;
+      top: 63px;
+      left: 20px;
     }
     &#option-4 {
-      top: 70px;
-      right: 15px;
+      top: 63px;
+      right: 20px;
     }
     &#option-5 {
-      top: 130px;
+      top: 113px;
       left: 0;
     }
     &#option-6 {
-      top: 130px;
+      top: 113px;
       right: 0;
     }
     &#option-7 {
-      bottom: 65px;
-      left: 15px;
+      bottom: 55px;
+      left: 20px;
     }
     &#option-8 {
-      bottom: 65px;
-      right: 15px;
+      bottom: 55px;
+      right: 20px;
     }
     &#option-9 {
-      bottom: 25px;
-      left: 55px;
+      bottom: 20px;
+      left: 63px;
     }
     &#option-10 {
-      bottom: 25px;
+      bottom: 20px;
       right: 55px;
     }
     &#option-11 {
       bottom: 0;
-      left: 130px;
+      left: 113px;
     }
   }
 }
@@ -241,4 +232,10 @@ $primary: #00796b;
     font-size: 14px;
     font-weight: 400;
   }
+}
+
+::ng-deep .mat-icon-button {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
 }
