chore: update color picker documentation

--- a/src/demo-app/app/color-picker/color-picker.component.html
+++ b/src/demo-app/app/color-picker/color-picker.component.html
@@ -22,7 +22,8 @@
     ...
     <span class="hljs-attribute">imports</span>: [
       MccColorPickerModule.forRoot({{ '{' }}
-        <span class="hljs-attribute">empty_color</span>: <span class="hljs-string">'transparent'</span>
+        <span class="hljs-attribute">empty_color</span>: <span class="hljs-string">'transparent',</span>
+        <span class="hljs-attribute">used_colors</span>: <span class="hljs-string">['#000000', '#FFF555']</span>
       {{ '}' }})
     ]
     ...
