Integration with Bootstrap grid system.
Please look the followinf issue:
https://github.com/tiaguinho/material-community-components/issues/82

--- a/src/lib/color-picker/color-picker-selector.component.scss
+++ b/src/lib/color-picker/color-picker-selector.component.scss
@@ -71,6 +71,7 @@ canvas {
   height: 40px;
   padding: 15px;
   border-bottom: 1px #e1e1e1 solid;
+  box-sizing: content-box;
 
   form {
     display: inline-block;
