--- a/src/lib/color-picker/color-picker-selector.component.scss
+++ b/src/lib/color-picker/color-picker-selector.component.scss
@@ -42,7 +42,7 @@ canvas {
   height: 170px;
 }
 
-/deep/ mat-form-field {
+::ng-deep mat-form-field {
   font-family: 'Open Sans';
   font-size: 11px;
   font-weight: bold;
