refactor(demo): add speed dial component docs

--- a/src/demo-app/app/app.component.html
+++ b/src/demo-app/app/app.component.html
@@ -7,6 +7,10 @@
     <mat-icon>timer</mat-icon>
     Timer Picker
   </button>
+  <button mat-button routerLink="/speed-dial">
+    <mat-icon>add_circle_outline</mat-icon>
+    Speed Dial
+  </button>
   <button mat-button routerLink="/scrollspy">
     <mat-icon>view_list</mat-icon>
     Scrollspy
