refactor(demo): add link to source directory

--- a/src/demo-app/app/color-picker/color-picker.component.html
+++ b/src/demo-app/app/color-picker/color-picker.component.html
@@ -12,7 +12,19 @@
       Overview
     </ng-template>
 
-    <h2>MccColorPicker</h2>
+    <mat-grid-list cols="4" rowHeight="70px">
+      <mat-grid-tile colspan="3">
+        <h2>MccColorPicker</h2>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <a href="https://github.com/tiaguinho/material-community-components/tree/master/src/lib/color-picker"
+          target="_blank">
+          <img src="../../../demo-app/assets/img/source-code.png" alt="Source Code" class="source-code" />
+        </a>
+      </mat-grid-tile>
+    </mat-grid-list>
+
     <p>When import the
       <code>MccColorPickerModule</code>, you can provide a configuration for the empy value.</p>
 
