--- a/src/demo-app/app/scrollspy/scrollspy.component.html
+++ b/src/demo-app/app/scrollspy/scrollspy.component.html
@@ -12,9 +12,20 @@
       Overview
     </ng-template>
 
-    <h2>MccScrollspy</h2>
-    <p>Scrollspy was created to link any point of a document that you want and create a sidebar navigation for that.</p>
+    <mat-grid-list cols="4" rowHeight="70px">
+      <mat-grid-tile colspan="3">
+        <h2>MccScrollspy</h2>
+      </mat-grid-tile>
 
+      <mat-grid-tile>
+        <a href="https://github.com/tiaguinho/material-community-components/tree/master/src/lib/scrollspy"
+          target="_blank">
+          <img src="../../../demo-app/assets/img/source-code.png" alt="Source Code" class="source-code" />
+        </a>
+      </mat-grid-tile>
+    </mat-grid-list>
+
+    <p>Scrollspy was created to link any point of a document that you want and create a sidebar navigation for that.</p>
 
   </mat-tab>
 
