--- a/src/demo-app/app/speed-dial/speed-dial.component.html
+++ b/src/demo-app/app/speed-dial/speed-dial.component.html
@@ -12,7 +12,18 @@
       Overview
     </ng-template>
 
-    <h2>MccSpeedDial</h2>
+    <mat-grid-list cols="4" rowHeight="70px">
+      <mat-grid-tile colspan="3">
+        <h2>MccSpeedDial</h2>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <a href="https://github.com/tiaguinho/material-community-components/tree/master/src/lib/speed-dial"
+          target="_blank">
+          <img src="../../../demo-app/assets/img/source-code.png" alt="Source Code" class="source-code" />
+        </a>
+      </mat-grid-tile>
+    </mat-grid-list>
 
   </mat-tab>
 
