--- a/src/demo-app/app/timer-picker/timer-picker.component.html
+++ b/src/demo-app/app/timer-picker/timer-picker.component.html
@@ -12,7 +12,18 @@
       Overview
     </ng-template>
 
-    <h2>MccTimerPicker</h2>
+    <mat-grid-list cols="4" rowHeight="70px">
+      <mat-grid-tile colspan="3">
+        <h2>MccTimerPicker</h2>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <a href="https://github.com/tiaguinho/material-community-components/tree/master/src/lib/timer-picker"
+          target="_blank">
+          <img src="../../../demo-app/assets/img/source-code.png" alt="Source Code" class="source-code" />
+        </a>
+      </mat-grid-tile>
+    </mat-grid-list>
 
     <p>This is a implementation of timer picker for material design.</p>
     <p>To use this component, just import the module from
