refactor(demo): add link to repo and package version

--- a/src/demo-app/app/app.component.html
+++ b/src/demo-app/app/app.component.html
@@ -20,3 +20,19 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
+<footer>
+  <div class="angular">
+    <a href="http://angular.io">
+      <img src="https://material.angular.io/assets/img/homepage/angular-white-transparent.svg" alt="Angular">
+    </a>
+  </div>
+  <div class="version">
+    Current Version: 5.0.1
+  </div>
+  <div class="github">
+    <a href="https://tiaguinho.github.io/material-community-components">
+      <img src="https://material.angular.io/assets/img/homepage/github-circle-white-transparent.svg" />
+    </a>
+  </div>
+</footer>
