--- a/src/demo-app/app/app.component.scss
+++ b/src/demo-app/app/app.component.scss
@@ -2,9 +2,45 @@
   font-size: 20px;
 }
 
+:host {
+  display: flex;
+  min-height: 100%; // used percent instead of vh due to safari bug.
+  flex-direction: column;
+}
+
 .container {
   display: block;
   width: 95%;
   margin: 0 auto;
+  flex: 1;
   padding-bottom: 100px;
+}
+
+footer {
+  display: flex;
+  width: 100%;
+  height: 100px;
+  align-items: center;
+  flex-flow: row nowrap;
+  padding: 15px 20px;
+  background-color: #4caf50;
+
+  div {
+    width: 33%;
+
+    &.angular img {
+      height: 70px;
+    }
+    &.version {
+      color: #ffffff;
+      text-align: center;
+    }
+    &.github {
+      text-align: center;
+
+      img {
+        height: 55px;
+      }
+    }
+  }
 }
