--- a/src/demo-app/styles.scss
+++ b/src/demo-app/styles.scss
@@ -26,6 +26,7 @@ $demo-theme: mat-light-theme($demo-primary, $demo-accent, $demo-warn);
 
 html,
 body {
+  height: 100%;;
   padding: 0;
   margin: 0;
   font-family: Roboto, sans-serif;
