--- a/src/demo-app/app/color-picker/color-picker.component.html
+++ b/src/demo-app/app/color-picker/color-picker.component.html
@@ -20,7 +20,7 @@
       <mat-grid-tile>
         <a href="https://github.com/tiaguinho/material-community-components/tree/master/src/lib/color-picker"
           target="_blank">
-          <img src="../../../demo-app/assets/img/source-code.png" alt="Source Code" class="source-code" />
+          <img src="https://github.com/tiaguinho/material-community-components/demo-app/assets/img/source-code.png" alt="Source Code" class="source-code" />
         </a>
       </mat-grid-tile>
     </mat-grid-list>
