fix(demo): github repository link

--- a/src/demo-app/app/app.component.html
+++ b/src/demo-app/app/app.component.html
@@ -31,7 +31,7 @@
     Current Version: 5.0.1
   </div>
   <div class="github">
-    <a href="https://tiaguinho.github.io/material-community-components">
+    <a href="https://github.com/tiaguinho/material-community-components">
       <img src="https://material.angular.io/assets/img/homepage/github-circle-white-transparent.svg" />
     </a>
   </div>
