fix(demo): change link to github pages domain

--- a/src/demo-app/app/speed-dial/speed-dial.component.html
+++ b/src/demo-app/app/speed-dial/speed-dial.component.html
@@ -20,7 +20,8 @@
       <mat-grid-tile>
         <a href="https://github.com/tiaguinho/material-community-components/tree/master/src/lib/speed-dial"
           target="_blank">
-          <img src="https://github.com/tiaguinho/material-community-components/demo-app/assets/img/source-code.png" alt="Source Code" class="source-code" />
+          <img src="https://tiaguinho.github.io/material-community-components/demo-app/assets/img/source-code.png"
+            alt="Source Code" class="source-code" />
         </a>
       </mat-grid-tile>
     </mat-grid-list>
