refactor(demo): change github image align

--- a/src/demo-app/app/app.component.scss
+++ b/src/demo-app/app/app.component.scss
@@ -35,7 +35,7 @@ footer {
       text-align: center;
     }
     &.github {
-      text-align: center;
+      text-align: end;
 
       img {
         height: 55px;
