--- a/src/demo-app/app/speed-dial/components/speed-dial-examples.component.html
+++ b/src/demo-app/app/speed-dial/components/speed-dial-examples.component.html
@@ -8,7 +8,7 @@
   <mat-card-content>
     <form [formGroup]="form">
       <mat-grid-list cols="3" rowHeight="250px">
-        <mat-grid-tile colspan="3">
+        <mat-grid-tile colspan="3" class="center">
           <mcc-speed-dial [direction]="direction" [open]="open" [spin]="spin" [mouseHover]="mouse_hover">
             <!-- This icon can be anything you want -->
             <mat-icon>add</mat-icon>
