--- a/src/demo-app/app/speed-dial/components/speed-dial-examples.component.scss
+++ b/src/demo-app/app/speed-dial/components/speed-dial-examples.component.scss
@@ -1,3 +1,8 @@
+::ng-deep .mat-grid-tile.center .mat-figure {
+  justify-content: center;
+  align-items: center;
+}
+
 ::ng-deep .mat-grid-tile .mat-figure {
   flex-flow: column;
 }
