chore(demo): add package name

--- a/src/demo-app/app/app.component.html
+++ b/src/demo-app/app/app.component.html
@@ -16,6 +16,10 @@
       </ng-template>
 
       <app-menu *ngIf="!mobile else toggle"></app-menu>
+
+      <span class="example-fill-remaining-space"></span>
+
+      <span>Material Community Components</span>
     </mat-toolbar>
 
     <div class="container">
