--- a/src/demo-app/app/app.component.scss
+++ b/src/demo-app/app/app.component.scss
@@ -1,9 +1,32 @@
 .mat-toolbar {
   color: #ffffff;
+}
 
-  .example-fill-remaining-space {
-    flex: 1 1 auto;
+.sidenav-container {
+  height: 100%;
+}
+
+.sidenav {
+  width: 270px;
+
+  .mat-toolbar {
+    color: #000000;
   }
+
+  .mat-icon {
+    position: relative;
+    top: 5px;
+  }
+}
+
+.sidenav .mat-toolbar {
+  background: inherit;
+}
+
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .mat-icon {
