fix(docs): hideTransparent -> hideTransparenUsedColors
Closes #99

--- a/src/demo-app/app/color-picker/components/color-picker-api.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-api.component.html
@@ -32,7 +32,7 @@
     </tr>
     <tr>
       <td>
-        <code>hideTransparent: boolean</code>
+        <code>hideTransparentUsedColors: boolean</code>
       </td>
       <td class="api-description">Hide transparent option of UsedColors</td>
     </tr>
