refactor(color-picker): buttons labels input to be more clear

--- a/src/lib/color-picker/color-picker.component.html
+++ b/src/lib/color-picker/color-picker.component.html
@@ -34,11 +34,11 @@
         <div *ngIf="!hideButtons" class="mcc-color-picker-actions">
 
             <button mat-button role="button" aria-label="Cancel" (click)="cancelSelection()">
-                {{ btnCancel }}
+                {{ btnCancelLabel }}
             </button>
 
             <button mat-button role="button" aria-label="Confirm" (click)="confirmSelectedColor()">
-                {{ btnConfirm }}
+                {{ btnConfirmLabel }}
             </button>
 
         </div>
