refactor(demo): change color picker btn label input

--- a/src/demo-app/app/color-picker/components/color-picker-api.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-api.component.html
@@ -80,14 +80,14 @@
     </tr>
     <tr>
       <td>
-        <code>btnCancel: string</code>
+        <code>btnCancelLabel: string</code>
       </td>
       <td class="api-description">Will replace the default text(
         <code>Cancel</code>) in cancel button</td>
     </tr>
     <tr>
       <td>
-        <code>btnConfirm: string</code>
+        <code>btnConfirmLabel: string</code>
       </td>
       <td class="api-description">Will replace the default text(
         <code>Confirm</code>) in confirm button</td>
