--- a/src/demo-app/app/color-picker/components/color-picker-examples.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-examples.component.html
@@ -228,7 +228,7 @@
   </mat-card-header>
 
   <mat-card-content>
-    <mcc-color-picker [btnCancel]="'ESC'" [btnConfirm]="'OK'">
+    <mcc-color-picker [btnCancelLabel]="'ESC'" [btnConfirmLabel]="'OK'">
 
       <mcc-color-picker-collection [label]="'First Collection'" hideEmpty="true" [colors]="colors">
       </mcc-color-picker-collection>
