style(timer-picker): remove ng-deep
Closes #123

--- a/src/lib/timer-picker/timer-picker.component.scss
+++ b/src/lib/timer-picker/timer-picker.component.scss
@@ -234,7 +234,7 @@ $primary: #00796b;
   }
 }
 
-::ng-deep .mat-icon-button {
+.mat-icon-button {
   width: 30px;
   height: 30px;
   line-height: 30px;
