--- a/src/lib/_theming.scss
+++ b/src/lib/_theming.scss
@@ -1,5 +1,7 @@
 @import 'timer-picker/timer-picker-theme';
+@import 'speed-dial/speed-dial-theme';
 
 @mixin mcc-theme($theme) {
-    @include mcc-timer-picker-theme($theme);    
+    @include mcc-timer-picker-theme($theme);
+    @include mcc-speed-dial-theme($theme);
 }
