feat(color-picker): prevent window of showing up when disabled is true
Closes #112

--- a/src/lib/color-picker/color-picker.component.html
+++ b/src/lib/color-picker/color-picker.component.html
@@ -1,6 +1,7 @@
 <!-- color picker overlay -->
 <ng-container *ngIf="overlay">
-    <button type="button" class="btn-picker" cdkOverlayOrigin #trigger="cdkOverlayOrigin" [ngClass]="{ 'empty': selectedColor === emptyColor }"
+    <button type="button" class="btn-picker" cdkOverlayOrigin #trigger="cdkOverlayOrigin"
+        [ngClass]="{ 'empty': selectedColor === emptyColor, 'disabled': disabled }"
         [style.background]="selectedColor" (click)="toggle()">
         <div class="transparent" *ngIf="selectedColor === emptyColor"></div>
     </button>
