fix(color-picker): cut-off digit in RGB inputs
Closes #131

--- a/src/lib/color-picker/color-picker-selector.component.scss
+++ b/src/lib/color-picker/color-picker-selector.component.scss
@@ -76,6 +76,17 @@ canvas {
   form {
     display: inline-block;
     position: relative;
+
+    input {
+      &::-webkit-outer-spin-button,
+      &::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+      &[type=number] {
+        -moz-appearance: textfield;
+      }
+    }
   }
 
   .hex-input {
