--- a/src/lib/color-picker/color-picker-collection.component.html
+++ b/src/lib/color-picker/color-picker-collection.component.html
@@ -8,9 +8,13 @@
 
         <button *ngFor="let color of colors" mat-mini-fab class="mat-elevation-z0" role="option" [disabled]="!color || color === emptyColor"
                 [mccColorPickerOption]="color" (click)="setColor(color)">
-          <mat-icon *ngIf="selectedColor === color; else emptyIcon">{{ selectedIcon }}</mat-icon>
-          <ng-template #emptyIcon>
-            <mat-icon></mat-icon>
-          </ng-template>
+
+          <ng-container *ngIf="!disableSelectedIcon">
+            <mat-icon *ngIf="selectedColor === color; else emptyIcon">{{ selectedIcon }}</mat-icon>
+            <ng-template #emptyIcon>
+              <mat-icon></mat-icon>
+            </ng-template>
+          </ng-container>
+
         </button>
 </div>
