style(demo-app): change table style

--- a/src/demo-app/styles.scss
+++ b/src/demo-app/styles.scss
@@ -70,6 +70,10 @@ hr {
   border: 1px dashed #ccc;
 }
 
+table {
+  background-color: #ffffff;
+}
+
 .code-snippet {
   display: block;
   font-size: 13px;
