--- a/src/demo-app/app/color-picker/components/color-picker-api.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-api.component.html
@@ -14,6 +14,12 @@
   <tbody>
     <tr>
       <td>
+        <code>disabled: boolean</code>
+      </td>
+      <td class="api-description">Disable color-picker pop up</td>
+    </tr>
+    <tr>
+    <td>
         <code>usedColorLabel: string</code>
       </td>
       <td class="api-description">Change the label of the used colors collection</td>
@@ -23,6 +29,18 @@
         <code>usedColorStart: string[]</code>
       </td>
       <td class="api-description">Set initial value for used colors collection</td>
+    </tr>
+    <tr>
+      <td>
+        <code>reverseUsedColors: boolean</code>
+      </td>
+      <td class="api-description">Reverse order of used colors list</td>
+    </tr>
+    <tr>
+      <td>
+        <code>hideHexForms: boolean</code>
+      </td>
+      <td class="api-description">Hide the hexadecimal color input form</td>
     </tr>
     <tr>
       <td>
@@ -53,6 +71,12 @@
         <code>hideColorPickerSelector: boolean</code>
       </td>
       <td class="api-description">Hide the color picker selector</td>
+    </tr>
+    <tr>
+      <td>
+        <code>colorPickerSelectorHeight: number</code>
+      </td>
+      <td class="api-description">Define new height of selector area</td>
     </tr>
     <tr>
       <td>
@@ -121,6 +145,12 @@
         <code>clickOut: EventEmitter</code>
       </td>
       <td class="api-description">Event emitted when is user clicks outside of the component</td>
+    </tr>
+    <tr>
+      <td>
+        <code>canceled: EventEmitter</code>
+      </td>
+      <td class="api-description">Event emitted when is user clicks on cancel button</td>
     </tr>
   </tbody>
 </table>
